--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
         <div id="post">
             <h1>Este titulo atractivo e interesante del post</h1>
             <p>Y este parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas </p>
+            <p>Los blog son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un Rockstar.
+                Pero estadisticamente no lo eres ... por ahora.
+            </p>
         </div>
     </div>
 </body>
